# arch-utils

./: Makefile  README.md
swaylock-mod/: main.c  meson.build  meson_options.txt  render.c  wlr-input-inhibitor-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml  wlr-screencopy-unstable-v1.xml
wdu/: go.mod  go.sum  main.go  utils.go
